# ViennaRNA

./: CHANGELOG.md  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  conf.py
doc/CLA/: Makefile.in
doc/doxygen/: Makefile.am  Makefile.in
examples/: Makefile.in
interfaces/: Makefile  Makefile.in  RNA.i  generic.mk  kinfold.i  structure_utils.i
interfaces/Perl/: Makefile.am  Makefile.in
interfaces/Python/: Makefile.am  Makefile.in  kinfold_api_wrapper.cpp
interfaces/Python2/: Makefile.am  Makefile.in
m4/: ac_rna.m4  ac_rna_build_requirements.m4  ac_rna_features.m4  ac_rna_swig.m4  ax_perl_ext_flags.m4  ax_python3_devel.m4
man/: Makefile.am  Makefile.in
misc/: Makefile.in  rna_turner2004.par
packaging/debian/: changelog
packaging/macosx/: Makefile.in
src/: .gitignore  GNUmakefile  Makefile  Makefile.am  Makefile.in
src/Kinfold/: Makefile  Makefile.am  Makefile.in  aclocal.m4  baum.c  baum.h  cache.c  cache_util.h  cmdline.c  cmdline.h  config.h  config.h.in  config.status  configure  configure.ac  configure~  globals.c  globals.h  kinfold.ggo  kinfold_api.c  kinfold_api.h  main.c  nachbar.c  nachbar.h
src/Kinfold/Example/: Makefile  Makefile.in
src/Kinfold/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
src/Kinwalker/: Makefile.in  aclocal.m4  config.h.in  configure
src/RNAforester/: Makefile.in  aclocal.m4  config.h.in  configure  (+1 more)
tests/: .gitignore  Makefile  Makefile.am  Makefile.in  RNAHelpers.pm  RNApath.py  test-env.sh  test-env.sh.in
(+215 files in other folders)
